fixed bg-image file path, as bg-image was not showing correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-size: 14px;
-    background-image: url("/assets/images/blue-snow.png")
+    background-image: url("../images/blue-snow.png")
 }
 nav{
     font-family: 'Righteous', cursive;
